[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["sudoapt <pramuk@live.ru>"]
packages = [
  { include = "brain_games" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
