[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["sudoapt <pramuk@live.ru>"]
packages = [
  { include = "brain_games" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
