[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "lorem ipsum dolor sit amet, consectetur adipisicing"
authors = ["sudoapt <pramuk@live.ru>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment"
  ]
repository = "https://github.com/sudoapt/python-project-49
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
prompt = "^0.4.1"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"





[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
